--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,23 @@
 body {
     font-family: 'Helvetica Neue', 'Helvetica', sans-serif;
 }
+.buttons {
+    text-align: center;
+}
+.values {
+    text-align: center;
+}
+.resultOut {
+    text-align: center;
+    background: linear-gradient();
+    background: #FFFFFF;
+    background: -moz-radial-gradient(center, #FFFFFF 0%, #CBCBCB 50%, #C1C1C1 100%);
+    background: -webkit-radial-gradient(center, #FFFFFF 0%, #CBCBCB 50%, #C1C1C1 100%);
+    background: radial-gradient(ellipse at center, #FFFFFF 0%, #CBCBCB 50%, #C1C1C1 100%);
+}
+.header {
+    background: #FFFFFF;
+    background: -moz-linear-gradient(top, #FFFFFF 0%, #7F7F7F 50%, #D3D3D3 100%);
+    background: -webkit-linear-gradient(top, #FFFFFF 0%, #7F7F7F 50%, #D3D3D3 100%);
+    background: linear-gradient(to bottom, #FFFFFF 0%, #7F7F7F 50%, #D3D3D3 100%);
+}
